User login and register with bcrypt pw finished, also add warning messages

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
         <h5 class="card-title text-center banner font-italic mb-5">變成有錢人的第一步，就是先學會記帳喔!!</h5>
         <h2 class="card-title text-center font-weight-bold">Login</h2>
         {{!-- 載入 messages.handlebars 的語法 --}}
-        {{!-- {{> messages}} --}}
+        {{> messages}}
 
         <form action='/users/login' method="POST">
           <div class="form-group">
