--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,7 +4,7 @@
       <div class="card-body">
         <h2 class="card-title text-center font-weight-bold">Register</h2>
         {{!-- 載入 messages.handlebars 的語法 --}}
-        {{!-- {{> messages}} --}}
+        {{> messages}}
 
         <form action='/users/register' method="POST">
           <div class="form-group">
