--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,1 +1,54 @@
-<h1>NEW page</h1>
+<form action="/records" method="POST" class="col-md-10 mx-auto mt-4">
+  <div class="row text-center my-3">
+    <p class="col-md-3">*必填欄位</p>
+    <h2 class="col-md-8">請輸入您的支出</h2>
+  </div>
+
+  <div class="form-group row">
+    <label for="name" class="col-md-3 col-form-label text-center">名稱* : </label>
+    <div class="col-md-8">
+      <input type="text" class="form-control" name="name" {{#if name}} value="{{{name}}}" {{/if}}required>
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="date" class="col-md-3 col-form-label text-center">日期* : </label>
+    <div class="col-md-8">
+      <input type="date" class="form-control" name="date" value="{{{date}}}">
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="select" class="col-md-3 col-form-label text-center">類別* : </label>
+    <div class="col-md-8">
+      {{#if category}}
+      <select class="form-control" name="category">
+        {{!-- handlebars helper 來做ifCond的判斷, helper放在record.js裡 --}}
+        <option value="life" {{#ifCond category '===' 'life'}} selected {{/ifCond}}>家居物業</option>
+        <option value="travel" {{#ifCond category '===' 'travel'}} selected {{/ifCond}}>交通出行</option>
+        <option value="happy" {{#ifCond category '===' 'happy'}} selected {{/ifCond}}>休閒娛樂</option>
+        <option value="food" {{#ifCond category '===' 'food'}} selected {{/ifCond}}>餐飲食品</option>
+        <option value="others" {{#ifCond category '===' 'others'}} selected {{/ifCond}}>其他</option>
+      </select>
+
+      {{else}}
+      <select class="form-control" name="category">
+        {{#each categories}}
+        <option value="{{{this.category}}}">{{{this.category_ch}}}</option>
+        {{/each}}
+      </select>
+      {{/if}}
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="amount" class="col-md-3 col-form-label text-center">金額* : </label>
+    <div class="col-md-8">
+      <input type="number" min="1" class="form-control" name="amount" required>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-8">
+      <a href="/" class="btn btn-secondary">Back</a>
+      <button type="submit" class="btn btn-primary float-right">新增支出</button>
+    </div>
+  </div>
+</form>
