--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,19 +11,19 @@
         {{/if}}
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=-01-&sort={{{selectOrder}}}">一月</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=-02-&sort={{{selectOrder}}}">二月</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=-03-&sort={{{selectOrder}}}">三月</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=-04-&sort={{{selectOrder}}}">四月</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=-05-&sort={{{selectOrder}}}">五月</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=-06-&sort={{{selectOrder}}}">六月</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=-07-&sort={{{selectOrder}}}">七月</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=-08-&sort={{{selectOrder}}}">八月</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=-09-&sort={{{selectOrder}}}">九月</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=-10-&sort={{{selectOrder}}}">十月</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=-11-&sort={{{selectOrder}}}">十一月</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=-12-&sort={{{selectOrder}}}">十二月</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month=&sort={{{selectOrder}}}">全部月份</a>
+        <a class="dropdown-item" href="/screen?month=-01-&cat={{{selectCategory}}}&sort={{{selectOrder}}}">一月</a>
+        <a class="dropdown-item" href="/screen?month=-02-&cat={{{selectCategory}}}&sort={{{selectOrder}}}">二月</a>
+        <a class="dropdown-item" href="/screen?month=-03-&cat={{{selectCategory}}}&sort={{{selectOrder}}}">三月</a>
+        <a class="dropdown-item" href="/screen?month=-04-&cat={{{selectCategory}}}&sort={{{selectOrder}}}">四月</a>
+        <a class="dropdown-item" href="/screen?month=-05-&cat={{{selectCategory}}}&sort={{{selectOrder}}}">五月</a>
+        <a class="dropdown-item" href="/screen?month=-06-&cat={{{selectCategory}}}&sort={{{selectOrder}}}">六月</a>
+        <a class="dropdown-item" href="/screen?month=-07-&cat={{{selectCategory}}}&sort={{{selectOrder}}}">七月</a>
+        <a class="dropdown-item" href="/screen?month=-08-&cat={{{selectCategory}}}&sort={{{selectOrder}}}">八月</a>
+        <a class="dropdown-item" href="/screen?month=-09-&cat={{{selectCategory}}}&sort={{{selectOrder}}}">九月</a>
+        <a class="dropdown-item" href="/screen?month=-10-&cat={{{selectCategory}}}&sort={{{selectOrder}}}">十月</a>
+        <a class="dropdown-item" href="/screen?month=-11-&cat={{{selectCategory}}}&sort={{{selectOrder}}}">十一月</a>
+        <a class="dropdown-item" href="/screen?month=-12-&cat={{{selectCategory}}}&sort={{{selectOrder}}}">十二月</a>
+        <a class="dropdown-item" href="/screen?month=&cat={{{selectCategory}}}&sort={{{selectOrder}}}">全部月份</a>
       </div>
     </div>
 
@@ -37,12 +37,12 @@
         {{/if}}
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item" href="/screen?cat=life&month={{{selectMonth}}}&sort={{{selectOrder}}}">家居物業</a>
-        <a class="dropdown-item" href="/screen?cat=travel&month={{{selectMonth}}}&sort={{{selectOrder}}}">交通出行</a>
-        <a class="dropdown-item" href="/screen?cat=happy&month={{{selectMonth}}}&sort={{{selectOrder}}}">休閒娛樂</a>
-        <a class="dropdown-item" href="/screen?cat=food&month={{{selectMonth}}}&sort={{{selectOrder}}}">餐飲食品</a>
-        <a class="dropdown-item" href="/screen?cat=others&month={{{selectMonth}}}&sort={{{selectOrder}}}">其他</a>
-        <a class="dropdown-item" href="/screen?cat=&month={{{selectMonth}}}">全部類別</a>
+        <a class="dropdown-item" href="/screen?month={{{selectMonth}}}&cat=life&sort={{{selectOrder}}}">家居物業</a>
+        <a class="dropdown-item" href="/screen?month={{{selectMonth}}}&cat=travel&sort={{{selectOrder}}}">交通出行</a>
+        <a class="dropdown-item" href="/screen?month={{{selectMonth}}}&cat=happy&sort={{{selectOrder}}}">休閒娛樂</a>
+        <a class="dropdown-item" href="/screen?month={{{selectMonth}}}&cat=food&sort={{{selectOrder}}}">餐飲食品</a>
+        <a class="dropdown-item" href="/screen?month={{{selectMonth}}}&cat=others&sort={{{selectOrder}}}">其他</a>
+        <a class="dropdown-item" href="/screen?month={{{selectMonth}}}&cat=&sort={{{selectOrder}}}">全部類別</a>
       </div>
     </div>
     <div class="dropdown mx-auto">
@@ -55,13 +55,13 @@
         {{/if}}
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month={{{selectMonth}}}&sort=dateAsc">時間
+        <a class="dropdown-item" href="/screen?month={{{selectMonth}}}&cat={{{selectCategory}}}&sort=dateAsc">時間
           (舊->新)</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month={{{selectMonth}}}&sort=dateDesc">時間
+        <a class="dropdown-item" href="/screen?month={{{selectMonth}}}&cat={{{selectCategory}}}&sort=dateDesc">時間
           (新->舊)</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month={{{selectMonth}}}&sort=amountDesc">金額
+        <a class="dropdown-item" href="/screen?month={{{selectMonth}}}&cat={{{selectCategory}}}&sort=amountDesc">金額
           (多->少)</a>
-        <a class="dropdown-item" href="/screen?cat={{{selectCategory}}}&month={{{selectMonth}}}&sort=amountAsc">金額
+        <a class="dropdown-item" href="/screen?month={{{selectMonth}}}&cat={{{selectCategory}}}&sort=amountAsc">金額
           (少->多)</a>
       </div>
     </div>
