--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,11 +10,11 @@
         <form action='/users/login' method="POST">
           <div class="form-group">
             <label for="email">Email address</label>
-            <input type="email" class="form-control" name="email" aria-describedby="email" required>
+            <input type="email" class="form-control" name="email" id="email" aria-describedby="email" required>
           </div>
           <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" name="password" required>
+            <input type="password" class="form-control" name="password" id="password" required>
           </div>
 
           <button type="submit" class="btn btn-primary btn-block">Login</button>
