--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -9,19 +9,19 @@
         <form action='/users/register' method="POST">
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="name" class="form-control" name="name" aria-describedby="name">
+            <input type="name" class="form-control" name="name" id="name" aria-describedby="name">
           </div>
           <div class="form-group">
             <label for="email">Email address</label>
-            <input type="email" class="form-control" name="email" aria-describedby="email">
+            <input type="email" class="form-control" name="email" id="email" aria-describedby="email">
           </div>
           <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" name="password">
+            <input type="password" class="form-control" name="password" id="password">
           </div>
           <div class="form-group">
             <label for="password2">Confirmed Password</label>
-            <input type="password" class="form-control" name="password2">
+            <input type="password" class="form-control" name="password2" id="password2">
           </div>
 
 
